# lerobot

./: CLAUDE.md  claude-progress.txt  feature_list.md  pyproject.toml
examples/vllm_policy/: README.md  config.json
examples/vllm_policy/scripts/: eval_visualize.py  generate_policy_dir.py
examples/webrtc_remote_so100/: README.md  cloud_teleop_so100.py  panel.html
plugins/lerobot_policy_vllm/: README.md  pyproject.toml
plugins/lerobot_policy_vllm/src/lerobot_policy_vllm/: __init__.py
plugins/lerobot_robot_so_follower_ee/: README.md  pyproject.toml
plugins/lerobot_robot_so_follower_ee/src/lerobot_robot_so_follower_ee/: __init__.py
plugins/lerobot_teleoperator_web_ee/: pyproject.toml
plugins/lerobot_teleoperator_web_ee/src/lerobot_teleoperator_web_ee/: __init__.py
src/lerobot/envs/: maniskill.py
src/lerobot/policies/vllm/: __init__.py  configuration_vllm.py  mock_server.py  modeling_vllm.py
src/lerobot/robots/: utils.py
src/lerobot/robots/so_follower_ee/: __init__.py  config_so_follower_ee.py  so_follower_ee.py
src/lerobot/robots/so_follower_ee/scripts/: render_urdf_zero.py
src/lerobot/robots/webrtc_proxy/: DESIGN.md  NAT_TRAVERSAL_NOTES.md  README.md  __init__.py  alignment.py  build_relay.sh  capture_agent.py  configuration_webrtc_proxy.py  control.py  demo_loopback.py  mac_daemon.py  nat_check.py  protocol.py  proxy_robot.py  run_relay.sh  signaling.py  signaling_server.py  sim_remote.py  tiling.py  transport.py  ws_server_daemon.py
src/lerobot/teleoperators/web_ee/: __init__.py  configuration_web_ee.py  teleop_web_ee.py
tests/robots/: conftest.py  test_webrtc_proxy_alignment.py  test_webrtc_proxy_camera.py  test_webrtc_proxy_control.py  test_webrtc_proxy_daemon.py  test_webrtc_proxy_livekit.py  test_webrtc_proxy_loopback.py  test_webrtc_proxy_multicam.py  test_webrtc_proxy_turn.py  test_webrtc_proxy_ws.py
